support integer arguments to the main function (#400)
* adding a test case to show that an old bug got fixed. closes #334

* adding a new test case to show that arguments are not currently passed to main

* adding a different presentation of the tests info while i'm thinking of it

* fixing a bad change to IDE settings

* adding a yul statement for comments

* adding helpers to compute abi decoder functions and insert them into the dispatch table and emit them in the body of the object

* updating test cases

* removing old test

* removing old test

* code to decode individual ints, using that to decode tuples, emitting it in the output file

* i forget to change the name of the contract every single time i copy a test

* traveseing the params not the returns

* renaming, scraps

* fixing an error in the ABI names we map to

* removing a todo
"

* scraps, scala style

* adding parameters to the json for the two tests that use them; the technical debt here is quickly becoming too much but i want to make sure this works before doing a pass at rewriting the test harness

* removing duplicate decoders from output, only assigning params to locals if there are more than 0 of them. this should make the old tests pass again

* using distinct instead of hard to read translations to and from set

* Adding some documentation and removing some todos

* fixing json for mainargs1, updating test script to read json for the two new tests in a slightly hacky and specific way

* increasing the padding size on arguments

* test.json is kind of part of a rewrite of the test infrastructure and not really part of this PR. so it doesn't belong in this branch anyway AND is breaking the tests

* removing some dead boilerplate

* updating the padding to the right length in the test script; removing a dead call to decode

* scala style and whitespace

* scraps, comments

--- a/Obsidian_Runtime/src/main/yul_templates/object.mustache
+++ b/Obsidian_Runtime/src/main/yul_templates/object.mustache
@@ -34,15 +34,10 @@ object "{{contractName}}" {
             {{! these functions for memory management are produced by the solc IR backend for
                 Solidity programs analagous to our test Obsidian programs.
              }}
-            function abi_decode_tuple(headStart, dataEnd)   {
-                if slt(sub(dataEnd, headStart), 0) { revert(0, 0) }
-            }
-
-            function abi_decode_t_uint256_fromMemory(offset, end) -> value {
-                value := mload(offset)
-            }
 
             {{abiEncodeTupleFuncs}}
+
+            {{abiDecodeFuncs}}
 
             function allocate_memory(size) -> memPtr {
                 memPtr := allocate_unbounded()
