adding field to yul object for tracers

--- a/Obsidian_Runtime/src/main/yul_templates/object.mustache
+++ b/Obsidian_Runtime/src/main/yul_templates/object.mustache
@@ -83,6 +83,8 @@ object "{{contractName}}" {
             }
 
             {{transactions}}
+
+            {{tracertransactions}}
         }
     }
 }
