--- a/Obsidian_Runtime/src/main/yul_templates/object.mustache
+++ b/Obsidian_Runtime/src/main/yul_templates/object.mustache
@@ -22,12 +22,17 @@ object "{{contractName}}" {
             {{#stash}}
                 function stash(value) {
                     // the word before the stashes stores how many times stash has been called
-                    let offset := sload(sub(0xC0DECAFE,32))
-                    sstore(add(0xC0DECAFE,mul(32,offset)),value)
-                    sstore(sub(0xC0DECAFE,32),add(offset,1))
+                    //let offset := sload(sub(0xC0DECAFE,32))
+                    //sstore(add(0xC0DECAFE,mul(32,offset)),value)
+                    //sstore(sub(0xC0DECAFE,32),add(offset,1))
+                    sstore(0xC0DECAFE,12)
                 }
                 function getstash(this, offset) -> result{
-                    result := sload(add(0xC0DECAFE,offset))
+                    //result := sload(add(0xC0DECAFE,offset))
+                    //result := sload(0xC0DECAFE)
+                    //result := 12 // this produces [12, 12, 12, 12] which is right
+                    //result := offset // this produces [0, 32, 64, 96] which is also probably right
+                    result := sload(0xC0DECAFE) // produces [0,0,0,0] when stash is sstore(0xC0DECAFE,12) which is wrong
                 }
             {{/stash}}
 
