writing to 4 adjacent places in storage

--- a/Obsidian_Runtime/src/main/yul_templates/object.mustache
+++ b/Obsidian_Runtime/src/main/yul_templates/object.mustache
@@ -22,11 +22,9 @@ object "{{contractName}}" {
             {{#stash}}
                 function stash(value) {
                     // the word before the stashes stores how many times stash has been called
-                    //let offset := sload(sub(0xC0DECAFE,32))
-                    //sstore(add(0xC0DECAFE,mul(32,offset)),value)
-                    //sstore(sub(0xC0DECAFE,32),add(offset,1))
-                    //sstore(0xC0DECAFE,value)
-                    sstore(0xC0DECAFE,value)
+                    let offset := sload(sub(0xC0DECAFE,32))
+                    sstore(add(0xC0DECAFE,mul(32,offset)),value)
+                    sstore(sub(0xC0DECAFE,32),add(offset,1))
                 }
             {{/stash}}
 
