adding a shorter constant

--- a/Obsidian_Runtime/src/main/yul_templates/object.mustache
+++ b/Obsidian_Runtime/src/main/yul_templates/object.mustache
@@ -27,7 +27,7 @@ object "{{contractName}}" {
         }
 
         function panic_error_0x41() {
-            mstore(0, 35408467139433450592217433187231851964531694900788300625387963629091585785856)
+            mstore(0, shl(224, 0x4e487b71))
             mstore(4, 0x41)
             revert(0, 0x24)
         }
@@ -87,7 +87,7 @@ object "{{contractName}}" {
             }
 
             function panic_error_0x41() {
-                mstore(0, 35408467139433450592217433187231851964531694900788300625387963629091585785856)
+                mstore(0, shl(224, 0x4e487b71))
                 mstore(4, 0x41)
                 revert(0, 0x24)
             }
