--- a/Obsidian_Runtime/src/main/yul_templates/object.mustache
+++ b/Obsidian_Runtime/src/main/yul_templates/object.mustache
@@ -116,6 +116,8 @@ object "{{contractName}}" {
             {{transactions}}
 
             {{tracertransactions}}
+
+            {{wipertransactions}}
         }
     }
 }
